[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/iron_tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/sheep_tiles.gd" type="Script" id=2]
[ext_resource path="res://scripts/Root.gd" type="Script" id=3]
[ext_resource path="res://scripts/iron_tiles.gd" type="Script" id=4]
[ext_resource path="res://scenes/sheep_tile.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/wheat_tile.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/wheat_tiles.gd" type="Script" id=7]
[ext_resource path="res://scenes/wood_tile.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/wood_tiles.gd" type="Script" id=9]
[ext_resource path="res://scenes/brick_tile.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/brick_tiles.gd" type="Script" id=11]
[ext_resource path="res://scenes/desert_tile.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/desert_tiles.gd" type="Script" id=13]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 20, 20 )

[sub_resource type="SpatialMaterial" id=2]

[node name="Root" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.863255, 0.504769, 0, -0.504769, 0.863255, 0, 8.157, 14.715 )

[node name="floor" type="Area" parent="."]

[node name="CollisionPolygon" type="CollisionPolygon" parent="floor"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.501, 0 )
polygon = PoolVector2Array( 10, 10, 10, -10, -10, -10, -10, 10 )

[node name="floor_mesh" type="CSGMesh" parent="floor"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 15.2036, 0 )

[node name="wheat_tiles" type="Spatial" parent="."]
script = ExtResource( 7 )

[node name="wheat1" parent="wheat_tiles" instance=ExtResource( 6 )]

[node name="wheat2" parent="wheat_tiles" instance=ExtResource( 6 )]

[node name="wheat3" parent="wheat_tiles" instance=ExtResource( 6 )]

[node name="wheat4" parent="wheat_tiles" instance=ExtResource( 6 )]

[node name="sheep_tiles" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="sheep1" parent="sheep_tiles" instance=ExtResource( 5 )]

[node name="sheep2" parent="sheep_tiles" instance=ExtResource( 5 )]

[node name="sheep3" parent="sheep_tiles" instance=ExtResource( 5 )]

[node name="sheep4" parent="sheep_tiles" instance=ExtResource( 5 )]

[node name="wood_tiles" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="wood1" parent="wood_tiles" instance=ExtResource( 8 )]

[node name="wood2" parent="wood_tiles" instance=ExtResource( 8 )]

[node name="wood3" parent="wood_tiles" instance=ExtResource( 8 )]

[node name="wood4" parent="wood_tiles" instance=ExtResource( 8 )]

[node name="brick_tiles" type="Spatial" parent="."]
script = ExtResource( 11 )

[node name="brick1" parent="brick_tiles" instance=ExtResource( 10 )]

[node name="brick2" parent="brick_tiles" instance=ExtResource( 10 )]

[node name="brick3" parent="brick_tiles" instance=ExtResource( 10 )]

[node name="iron_tiles" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="iron1" parent="iron_tiles" instance=ExtResource( 1 )]

[node name="iron2" parent="iron_tiles" instance=ExtResource( 1 )]

[node name="iron3" parent="iron_tiles" instance=ExtResource( 1 )]

[node name="desert_tiles" type="Spatial" parent="."]
script = ExtResource( 13 )

[node name="desert1" parent="desert_tiles" instance=ExtResource( 12 )]
